--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ lib/jave-1.0.2/
 netampg.jar
 lib/javaFlacEncoder-0.3.1-all.tar.gz
 /bin/
-build/netamtp.jar
+build/*.jar
 /class/
 /classes/
+_archive
+samples
+docs
