--- a/conf/mtm.properties
+++ b/conf/mtm.properties
@@ -1,10 +1,10 @@
 #MTPSync Props
-#Tue Feb 10 06:59:55 PST 2015
-dir_REPO=E\:\\Audio Projects\\Meet The Moores
+#Tue Feb 10 10:27:39 PST 2015
 gitBranch=master
+dir_REPO=E\:\\Audio Projects\\Meet The Moores
 dir_ENCODED_FILES=E\:\\Audio Projects\\Meet The Moores\\_mixdown\\MASTER\\flac
-dir_SYNC_MTP=/storage/sdcard1/Music/JTM/Meet The Moores/MASTER
 gitRemote=origin
+dir_SYNC_MTP=/storage/sdcard1/Music/JTM/Meet The Moores/MASTER
 pCode=mtm
 dir_SYNC_LOCAL=E\:\\Audio Projects\\Meet The Moores\\_mixdown\\MASTER
-flgEncode=true
+flgEncode=false
