Encoding now switchabel between flac and mp3

--- a/conf/mtm.properties
+++ b/conf/mtm.properties
@@ -1,10 +1,11 @@
 #MTPSync Props
-#Tue Feb 10 10:27:39 PST 2015
-gitBranch=master
+#Thu Feb 12 09:30:15 PST 2015
 dir_REPO=E\:\\Audio Projects\\Meet The Moores
-dir_ENCODED_FILES=E\:\\Audio Projects\\Meet The Moores\\_mixdown\\MASTER\\flac
-gitRemote=origin
+dir_SYNC_LOCAL=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER
+flgEncode=true
 dir_SYNC_MTP=/storage/sdcard1/Music/JTM/Meet The Moores/MASTER
+gitBranch=master
+encFormat=mp3
 pCode=mtm
-dir_SYNC_LOCAL=E\:\\Audio Projects\\Meet The Moores\\_mixdown\\MASTER
-flgEncode=false
+dir_ENCODED_FILES=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER\\mp3
+gitRemote=origin
