--- a/conf/mtpsync.properties
+++ b/conf/mtpsync.properties
@@ -1,8 +1,11 @@
 #MTPSync Props
-#Tue Feb 10 14:59:52 PST 2015
-gitBranch=master
-gitRemote=origin
+#Thu Feb 12 09:30:15 PST 2015
+dir_REPO=E\:\\Audio Projects\\Meet The Moores
+dir_SYNC_LOCAL=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER
+flgEncode=true
 dir_SYNC_MTP=/storage/sdcard1/Music/JTM/Meet The Moores/MASTER
-pCode=mtm-c
-dir_SYNC_LOCAL=C\:\\Users\\jomo2\\My Music\\JTM\\Meet the Moores\\MASTER
-flgEncode=false
+gitBranch=master
+encFormat=mp3
+pCode=mtm
+dir_ENCODED_FILES=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER\\mp3
+gitRemote=origin
