--- a/conf/mtm-m.properties
+++ b/conf/mtm-m.properties
@@ -1,11 +1,11 @@
 #MTPSync Props
-#Thu Feb 12 09:30:15 PST 2015
+#Wed Feb 18 09:49:05 PST 2015
 dir_REPO=E\:\\Audio Projects\\Meet The Moores
 dir_SYNC_LOCAL=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER
 flgEncode=true
 dir_SYNC_MTP=/storage/sdcard1/Music/JTM/Meet The Moores/MASTER
 gitBranch=master
-encFormat=mp3
-pCode=mtm
-dir_ENCODED_FILES=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER\\mp3
+encFormat=flac
+pCode=mtm-m
+dir_ENCODED_FILES=E\:\\Audio Projects\\Meet The Moores\\MTM Master\\MASTER\\flac
 gitRemote=origin
